<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/repositoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/repository_name" />

    <TextView
        android:id="@+id/programmingLanguageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/programming_language" />

    <TextView
        android:id="@+id/repositoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/repository_description" />

    <TextView
        android:id="@+id/createdDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/created_date" />

    <TextView
        android:id="@+id/updatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/updated_date" />

    <Button
        android:id="@+id/btnShowUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_user_detail" />

    <Button
        android:id="@+id/btnOpenWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/open_web_repository"
        android:visibility="gone" />

</LinearLayout>