<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.userdetailscreen.UserDetailsActivity">

    <ImageView
        android:id="@+id/userDetailsImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/userDetailsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/userDetailsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id" />

    <TextView
        android:id="@+id/nodeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_node_id" />

    <TextView
        android:id="@+id/userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type" />

    <Button
        android:id="@+id/btnOpenUserWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/open_web_user"
        android:visibility="gone" />


</LinearLayout>