<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_app_background" />

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_app_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/repositoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/repository_name" />

        <TextView
            android:id="@+id/followersNumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/followers_numb" />

        <TextView
            android:id="@+id/forksNumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/forks_numb" />

        <TextView
            android:id="@+id/issuesNumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/issues_numb" />
    </LinearLayout>


</LinearLayout>