<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userdetailscreen.UserDetailsScreen">

    <ImageView
        android:id="@+id/userDetailsImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/userDetailsName"
            android:layout_width="wrap_content"
            android:hint="@string/user_name"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/UserDetailsId"
            android:hint="@string/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnOpenUserWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/open_web_user"/>



</LinearLayout>