<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen.HomeScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/query_edit_text"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/enter_query_hint"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:layout_marginLeft="50dp"
            android:inputType="text"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/send_query_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/white"
            android:padding="12dp"
            android:src="@drawable/ic_search" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@id/toolbar_custom"
        android:layout_above="@id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_sort_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sort_by_stars"/>
        <Button
            android:id="@+id/btn_sort_forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sort_by_forks"/>
        <Button
            android:id="@+id/btn_sort_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sort_by_updated"/>
    </LinearLayout>

</RelativeLayout>