<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.homeactivity.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/enter_query_hint"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:layout_marginLeft="50dp"
            android:inputType="text"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/sendQueryBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_gray"
            android:padding="12dp"
            android:src="@drawable/ic_search" />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/toolbar_custom"
        android:layout_above="@id/btnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/sortGroupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">
        <RadioButton
            android:id="@+id/btnSortStars"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_sort_by_stars"/>
        <RadioButton
            android:id="@+id/btnSortForks"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/btn_sort_by_forks"/>
        <RadioButton
            android:id="@+id/btnSortUpdated"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_sort_by_updated"/>
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>